[gd_scene load_steps=12 format=3 uid="uid://jvjmve2k2v5l"]

[ext_resource type="Script" path="res://main.gd" id="1_dveo7"]
[ext_resource type="Script" path="res://CodeEditor.gd" id="2_pcoh8"]
[ext_resource type="Theme" uid="uid://d3xicm2is0yjk" path="res://main.tres" id="2_v38y2"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_yo75q"]
content_margin_left = 4.0
content_margin_top = 4.0
content_margin_right = 4.0
content_margin_bottom = 4.0
bg_color = Color(0.219608, 0.219608, 0.219608, 1)

[sub_resource type="InputEventKey" id="InputEventKey_5f13f"]
device = -1
keycode = 4194336

[sub_resource type="Shortcut" id="Shortcut_pv6al"]
events = [SubResource("InputEventKey_5f13f")]

[sub_resource type="InputEventKey" id="InputEventKey_vajla"]
device = -1
ctrl_pressed = true
keycode = 76
unicode = 108

[sub_resource type="Shortcut" id="Shortcut_u1gka"]
events = [SubResource("InputEventKey_vajla")]

[sub_resource type="SystemFont" id="SystemFont_hyuqp"]
font_names = PackedStringArray("Fira Code")

[sub_resource type="CodeHighlighter" id="CodeHighlighter_6u3ta"]
number_color = Color(0.686275, 0.384314, 0.890196, 1)
symbol_color = Color(0.890196, 0.384314, 0.533333, 1)
function_color = Color(0.458824, 0.694118, 1, 1)
member_variable_color = Color(0.580392, 0.94902, 0.690196, 1)
color_regions = {
"\" \"": Color(0.941176, 0.87451, 0.639216, 1),
"' '": Color(0.941176, 0.87451, 0.639216, 1),
"//": Color(0.411765, 0.411765, 0.411765, 1)
}

[sub_resource type="SystemFont" id="SystemFont_ihcy4"]
font_names = PackedStringArray("Source Code Pro")

[node name="Main" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_dveo7")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 0

[node name="TopPanel" type="PanelContainer" parent="VBoxContainer"]
layout_mode = 2
theme = ExtResource("2_v38y2")
theme_override_styles/panel = SubResource("StyleBoxFlat_yo75q")

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/TopPanel"]
layout_mode = 2
alignment = 1

[node name="Language" type="HBoxContainer" parent="VBoxContainer/TopPanel/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="LanguageSelector" type="OptionButton" parent="VBoxContainer/TopPanel/HBoxContainer/Language"]
unique_name_in_owner = true
layout_mode = 2
theme = ExtResource("2_v38y2")
item_count = 2
selected = 0
popup/item_0/text = "Kotlin"
popup/item_0/id = 0
popup/item_1/text = "Swift"
popup/item_1/id = 1

[node name="RunButton" type="Button" parent="VBoxContainer/TopPanel/HBoxContainer/Language"]
unique_name_in_owner = true
layout_mode = 2
theme = ExtResource("2_v38y2")
shortcut = SubResource("Shortcut_pv6al")
text = "Run ▶️"

[node name="Console" type="HBoxContainer" parent="VBoxContainer/TopPanel/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
alignment = 2

[node name="ClearButton" type="Button" parent="VBoxContainer/TopPanel/HBoxContainer/Console"]
layout_mode = 2
theme = ExtResource("2_v38y2")
shortcut = SubResource("Shortcut_u1gka")
text = "Clear ⨯"

[node name="Editor" type="PanelContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="HSplitContainer" type="HSplitContainer" parent="VBoxContainer/Editor"]
layout_mode = 2
size_flags_vertical = 3
split_offset = 185
metadata/_edit_lock_ = true

[node name="CodeEditor" type="CodeEdit" parent="VBoxContainer/Editor/HSplitContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_override_fonts/font = SubResource("SystemFont_hyuqp")
text = "// Hello World Program
println(\"Hello, World!\")
Thread.sleep(1_000)
println(\"Best regards from Kotlin.\")"
deselect_on_focus_loss_enabled = false
highlight_all_occurrences = true
highlight_current_line = true
draw_spaces = true
syntax_highlighter = SubResource("CodeHighlighter_6u3ta")
minimap_draw = true
caret_move_on_right_click = false
symbol_lookup_on_click = true
line_folding = true
gutters_draw_line_numbers = true
gutters_draw_fold_gutter = true
delimiter_comments = Array[String](["//"])
code_completion_enabled = true
indent_use_spaces = true
indent_automatic = true
indent_automatic_prefixes = Array[String](["{", "[", "("])
auto_brace_completion_enabled = true
auto_brace_completion_highlight_matching = true
script = ExtResource("2_pcoh8")

[node name="OutputPanel" type="PanelContainer" parent="VBoxContainer/Editor/HSplitContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Output" type="RichTextLabel" parent="VBoxContainer/Editor/HSplitContainer/OutputPanel"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_override_fonts/mono_font = SubResource("SystemFont_ihcy4")
scroll_following = true

[connection signal="item_selected" from="VBoxContainer/TopPanel/HBoxContainer/Language/LanguageSelector" to="." method="_on_language_selector_item_selected"]
[connection signal="pressed" from="VBoxContainer/TopPanel/HBoxContainer/Language/RunButton" to="." method="_on_run_button_pressed"]
[connection signal="pressed" from="VBoxContainer/TopPanel/HBoxContainer/Console/ClearButton" to="." method="_on_clear_button_pressed"]
